# ssohee-eco

./: .gitignore  .neon  AGENTS.md  DEPLOYMENT.md  README.md  package.json  pyproject.toml  start.sh  vercel.json
api/: index.py
backend/: init_db.py  requirements.txt
backend/app/: main.py
backend/app/api/: analytics.py  market.py  portfolio.py  rebalance.py  transactions.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  transaction.py
backend/app/schemas/: analytics.py  market.py  portfolio.py  rebalance.py  transaction.py
backend/app/services/: analytics_service.py  buy_timing_service.py  market_service.py  portfolio_service.py  price_service.py  rebalance_service.py  tax_loss_harvesting.py
backend/scripts/: import_transactions.py
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: OrdersTable.tsx  PortfolioTable.tsx  StatCard.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: AnalyticsPage.tsx  BuyTimingPage.tsx  DashboardPage.tsx  MarketPages.tsx  RebalancePage.tsx  SettingsPage.tsx  TransactionsPage.tsx
