[project]
name = "ssohee-eco"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.11.0",
    "sqlalchemy==2.0.36",
    "python-dotenv==1.0.1",
    "yfinance==0.2.51",
    "pandas==2.3.3",
    "httpx==0.28.1",
    "psycopg[binary]==3.2.13",
]

[project.scripts]
app = "backend.app.main:app"
